refactor(availability): enhance audit logging, optimistic locking, data scope, and dynamic holiday deductions
- Add audit trail logging for weekly availability declarations (TC-04)

- Add optimistic locking version to employee_weekly_availabilities table and entity

- Enforce organization branch data scope for resource managers (VT-03) and HR

- Support dynamic holiday deducted hours from holidays table in policy and adapter

- Add comprehensive unit tests covering audit log, data scope, and dynamic holidays