@@ -8,15 +8,27 @@ import com.hrm.employeemanagement.application.port.outbound.availability.LoadHol
 import com.hrm.employeemanagement.application.port.outbound.availability.LoadWeeklyAvailabilityPort;
 import com.hrm.employeemanagement.application.port.outbound.availability.SaveWeeklyAvailabilityPort;
 import com.hrm.employeemanagement.application.port.outbound.user.LoadEmployeePort;
+import com.hrm.employeemanagement.application.port.outbound.orgunit.LoadOrgUnitPort;
+import com.hrm.employeemanagement.application.port.outbound.user.LoadUserPort;
+import com.hrm.employeemanagement.application.port.outbound.user.SaveAuditLogPort;
 import com.hrm.employeemanagement.application.service.authorization.AuthorizationService;
+import com.hrm.employeemanagement.domain.audit.AuditLog;
 import com.hrm.employeemanagement.domain.authorization.PermissionCode;
+import com.hrm.employeemanagement.domain.availability.Holiday;
 import com.hrm.employeemanagement.domain.availability.WeeklyAvailability;
 import com.hrm.employeemanagement.domain.availability.YearWeek;
 import com.hrm.employeemanagement.domain.employee.Employee;
 import com.hrm.employeemanagement.domain.employee.EmployeeId;
 import com.hrm.employeemanagement.domain.employee.EmployeeStatus;
+import com.hrm.employeemanagement.domain.exception.authorization.PermissionDeniedException;
 import com.hrm.employeemanagement.domain.exception.employee.EmployeeNotFoundException;
+import com.hrm.employeemanagement.domain.authorization.DataScope;
+import com.hrm.employeemanagement.domain.role.Role;
+import com.hrm.employeemanagement.domain.role.RoleCode;
+import com.hrm.employeemanagement.domain.role.RoleId;
+import com.hrm.employeemanagement.domain.user.User;
 import com.hrm.employeemanagement.domain.user.UserId;
+import com.hrm.employeemanagement.domain.user.UserStatus;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -26,6 +38,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -54,9 +67,19 @@ class WeeklyAvailabilityServiceTest {
     private LoadApprovedLeavesPort loadApprovedLeavesPort;
 
     @Mock
+    private SaveAuditLogPort saveAuditLogPort;
+
+    @Mock
+    private LoadUserPort loadUserPort;
+
+    @Mock
+    private LoadOrgUnitPort loadOrgUnitPort;
+
+    @Mock
     private AuthorizationService authorizationService;
 
     private WeeklyAvailabilityService service;
+    private User companyAdminUser;
 
     @BeforeEach
     void setUp() {
@@ -66,70 +89,109 @@ class WeeklyAvailabilityServiceTest {
                 saveWeeklyAvailabilityPort,
                 loadHolidaysPort,
                 loadApprovedLeavesPort,
+                saveAuditLogPort,
+                loadUserPort,
+                loadOrgUnitPort,
                 authorizationService
         );
+
+        Role hrRole = new Role(new RoleId(1L), RoleCode.VT_05, "Nhân sự");
+        companyAdminUser = new User(new UserId(1L), "hr_user", "hash", hrRole, UserStatus.ACTIVE, new EmployeeId(1L), DataScope.COMPANY, null, 0L);
     }
 
     @Test
-    @DisplayName("Khai báo giờ chuẩn tuần thành công (TC-CMD-01)")
-    void declareAvailability_Success() {
+    @DisplayName("Khai báo giờ chuẩn tuần thành công và ghi Audit Log (TC-01, TC-04)")
+    void declareAvailability_Success_And_AuditLog_Saved() {
         Long employeeId = 100L;
         Employee employee = new Employee(new EmployeeId(employeeId), new UserId(1L), 1L, "EMP001", "Nguyễn Văn A", null, null, null, false, 40, EmployeeStatus.ACTIVE);
 
+        when(authorizationService.require(PermissionCode.EMPLOYEE_UPDATE)).thenReturn(1L);
+        when(loadUserPort.findById(new UserId(1L))).thenReturn(Optional.of(companyAdminUser));
         when(loadEmployeePort.findById(new EmployeeId(employeeId))).thenReturn(Optional.of(employee));
         when(loadWeeklyAvailabilityPort.findByEmployeeIdAndYearWeek(eq(employeeId), any(YearWeek.class)))
                 .thenReturn(Optional.empty());
-        when(loadHolidaysPort.getHolidayDatesBetween(any(), any())).thenReturn(List.of());
-        when(loadApprovedLeavesPort.getTotalApprovedLeaveHoursBetween(any(), any(), any()))
+        when(loadHolidaysPort.getHolidaysBetween(any(LocalDate.class), any(LocalDate.class)))
+                .thenReturn(Collections.emptyList());
+        when(loadApprovedLeavesPort.getTotalApprovedLeaveHoursBetween(eq(employeeId), any(LocalDate.class), any(LocalDate.class)))
                 .thenReturn(BigDecimal.ZERO);
         when(saveWeeklyAvailabilityPort.save(any(WeeklyAvailability.class)))
                 .thenAnswer(invocation -> invocation.getArgument(0));
 
-        DeclareWeeklyAvailabilityCommand command = new DeclareWeeklyAvailabilityCommand(
-                employeeId, 2026, 36, 40);
-
+        DeclareWeeklyAvailabilityCommand command = new DeclareWeeklyAvailabilityCommand(employeeId, 2026, 36, 40);
         WeeklyAvailabilityResult result = service.execute(command);
 
         assertNotNull(result);
-        assertEquals(employee.getIdValue(), result.employeeId());
-        assertEquals(2026, result.year());
-        assertEquals(36, result.weekNumber());
         assertEquals(40, result.standardHours());
         assertEquals(new BigDecimal("40.00"), result.netAvailableHours());
 
         verify(authorizationService).require(PermissionCode.EMPLOYEE_UPDATE);
         verify(saveWeeklyAvailabilityPort).save(any(WeeklyAvailability.class));
+        // Xác nhận đã lưu Audit Log theo TC-04
+        verify(saveAuditLogPort).save(any(AuditLog.class));
     }
 
     @Test
-    @DisplayName("Khai báo thất bại khi không tìm thấy nhân sự (TC-CMD-03)")
-    void declareAvailability_EmployeeNotFound() {
-        Long invalidEmployeeId = 999L;
-        when(loadEmployeePort.findById(new EmployeeId(invalidEmployeeId))).thenReturn(Optional.empty());
+    @DisplayName("Bán thời gian: Tính năng lực tuần dùng 20 giờ thay vì mặc định 40 giờ (TC-02)")
+    void calculate_PartTime_Uses20Hours() {
+        Long employeeId = 100L;
+        Employee employee = new Employee(new EmployeeId(employeeId), new UserId(1L), 1L, "EMP001", "Nguyễn Văn Bán Thời Gian", null, null, null, false, 20, EmployeeStatus.ACTIVE);
 
-        DeclareWeeklyAvailabilityCommand command = new DeclareWeeklyAvailabilityCommand(
-                invalidEmployeeId, 2026, 36, 40);
+        when(authorizationService.require(PermissionCode.EMPLOYEE_READ)).thenReturn(1L);
+        when(loadUserPort.findById(new UserId(1L))).thenReturn(Optional.of(companyAdminUser));
+        when(loadEmployeePort.findById(new EmployeeId(employeeId))).thenReturn(Optional.of(employee));
+        when(loadWeeklyAvailabilityPort.findByEmployeeIdAndYearWeek(eq(employeeId), any(YearWeek.class)))
+                .thenReturn(Optional.empty());
+        when(loadHolidaysPort.getHolidaysBetween(any(LocalDate.class), any(LocalDate.class)))
+                .thenReturn(Collections.emptyList());
+        when(loadApprovedLeavesPort.getTotalApprovedLeaveHoursBetween(eq(employeeId), any(LocalDate.class), any(LocalDate.class)))
+                .thenReturn(BigDecimal.ZERO);
 
-        assertThrows(EmployeeNotFoundException.class, () -> service.execute(command));
-        verify(authorizationService).require(PermissionCode.EMPLOYEE_UPDATE);
-        verify(saveWeeklyAvailabilityPort, never()).save(any());
+        CalculateWeeklyCapacityQuery query = new CalculateWeeklyCapacityQuery(employeeId, 2026, 36);
+        WeeklyAvailabilityResult result = service.calculate(query);
+
+        assertNotNull(result);
+        assertEquals(20, result.standardHours());
+        assertEquals(new BigDecimal("20.00"), result.netAvailableHours());
     }
 
     @Test
-    @DisplayName("Tính toán năng lực khả dụng theo QTN-10 có ngày lễ và nghỉ phép đã duyệt")
-    void calculateWeeklyCapacity_WithHolidaysAndApprovedLeaves() {
+    @DisplayName("Data Scope: Người dùng nhánh khác cố truy cập nhân viên ngoài phạm vi -> Ném PermissionDeniedException (TC-03 & Security)")
+    void dataScope_OrganizationBranch_DeniedWhenOutOfScope() {
+        Long employeeId = 100L;
+        Employee employee = new Employee(new EmployeeId(employeeId), new UserId(2L), 10L, "EMP001", "Nguyễn Văn A", null, null, null, false, 40, EmployeeStatus.ACTIVE);
+
+        Role rmRole = new Role(new RoleId(2L), RoleCode.VT_03, "Quản lý nguồn lực");
+        User rmUserBranch = new User(new UserId(2L), "rm_user", "hash", rmRole, UserStatus.ACTIVE, new EmployeeId(2L), DataScope.ORGANIZATION_BRANCH, 5L, 0L);
+
+        when(authorizationService.require(PermissionCode.EMPLOYEE_READ)).thenReturn(2L);
+        when(loadUserPort.findById(new UserId(2L))).thenReturn(Optional.of(rmUserBranch));
+        when(loadEmployeePort.findById(new EmployeeId(employeeId))).thenReturn(Optional.of(employee));
+        // Đơn vị 10 không thuộc nhánh quản lý 5
+        when(loadOrgUnitPort.existsInOrgUnitBranch(10L, 5L)).thenReturn(false);
+
+        CalculateWeeklyCapacityQuery query = new CalculateWeeklyCapacityQuery(employeeId, 2026, 36);
+        assertThrows(PermissionDeniedException.class, () -> service.calculate(query));
+    }
+
+    @Test
+    @DisplayName("Tính năng lực tuần trừ đúng ngày lễ linh hoạt và nghỉ phép đã duyệt theo QTN-10")
+    void calculate_DeductsDynamicHolidaysAndLeaves() {
         Long employeeId = 100L;
         Employee employee = new Employee(new EmployeeId(employeeId), new UserId(1L), 1L, "EMP001", "Nguyễn Văn A", null, null, null, false, 40, EmployeeStatus.ACTIVE);
 
         YearWeek yearWeek = YearWeek.of(2026, 36);
         LocalDate wednesday = yearWeek.getStartDate().plusDays(2);
+        Holiday holiday = new Holiday(wednesday, "Lễ Quốc Khánh", 8);
 
+        when(authorizationService.require(PermissionCode.EMPLOYEE_READ)).thenReturn(1L);
+        when(loadUserPort.findById(new UserId(1L))).thenReturn(Optional.of(companyAdminUser));
         when(loadEmployeePort.findById(new EmployeeId(employeeId))).thenReturn(Optional.of(employee));
         when(loadWeeklyAvailabilityPort.findByEmployeeIdAndYearWeek(eq(employeeId), any(YearWeek.class)))
                 .thenReturn(Optional.empty());
-        when(loadHolidaysPort.getHolidayDatesBetween(any(), any())).thenReturn(List.of(wednesday)); // 1 ngày lễ = 8h
-        when(loadApprovedLeavesPort.getTotalApprovedLeaveHoursBetween(any(), any(), any()))
-                .thenReturn(new BigDecimal("8.00")); // 1 ngày phép đã duyệt = 8h
+        when(loadHolidaysPort.getHolidaysBetween(any(LocalDate.class), any(LocalDate.class)))
+                .thenReturn(List.of(holiday));
+        when(loadApprovedLeavesPort.getTotalApprovedLeaveHoursBetween(eq(employeeId), any(LocalDate.class), any(LocalDate.class)))
+                .thenReturn(new BigDecimal("16.00")); // 2 ngày phép
 
         CalculateWeeklyCapacityQuery query = new CalculateWeeklyCapacityQuery(employeeId, 2026, 36);
         WeeklyAvailabilityResult result = service.calculate(query);
@@ -137,10 +199,20 @@ class WeeklyAvailabilityServiceTest {
         assertNotNull(result);
         assertEquals(40, result.standardHours());
         assertEquals(8, result.holidayHours());
-        assertEquals(new BigDecimal("8.00"), result.approvedLeaveHours());
-        // Khả dụng = 40 - 8 (lễ) - 8 (phép duyệt) = 24h
-        assertEquals(new BigDecimal("24.00"), result.netAvailableHours());
+        assertEquals(new BigDecimal("16.00"), result.approvedLeaveHours());
+        // 40 - 8 - 16 = 16.00
+        assertEquals(new BigDecimal("16.00"), result.netAvailableHours());
+    }
 
-        verify(authorizationService).require(PermissionCode.EMPLOYEE_READ);
+    @Test
+    @DisplayName("Khai báo giờ tuần thất bại khi không tìm thấy nhân viên -> Ném EmployeeNotFoundException")
+    void declareAvailability_EmployeeNotFound() {
+        Long employeeId = 9999L;
+        when(authorizationService.require(PermissionCode.EMPLOYEE_UPDATE)).thenReturn(1L);
+        when(loadUserPort.findById(new UserId(1L))).thenReturn(Optional.of(companyAdminUser));
+        when(loadEmployeePort.findById(new EmployeeId(employeeId))).thenReturn(Optional.empty());
+
+        DeclareWeeklyAvailabilityCommand command = new DeclareWeeklyAvailabilityCommand(employeeId, 2026, 36, 40);
+        assertThrows(EmployeeNotFoundException.class, () -> service.execute(command));
     }
 }
